apps/radarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  serviceName: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - image: ghcr.io/linuxserver/radarr:version-6.4.4.10685
          imagePullPolicy: Always
          name: radarr
          ports:
            - containerPort: 7878
              name: http
          readinessProbe:
            httpGet:
              path: /login
              port: 7878
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: movies
              mountPath: /movies
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: nfs-downloads
        - name: movies
          persistentVolumeClaim:
            claimName: nfs-videos-movies
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
