apps/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - radarr.hubbe.club  
  rules:
    - host: radarr.hubbe.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
